incubator/nginx-webserver/0.0.4/CONFIG.md
# nginx-webserver

![Version: 0.0.4](https://img.shields.io/badge/Version-0.0.4-informational?style=flat-square) ![Type: application](https://img.shields.io/badge/Type-application-informational?style=flat-square) ![AppVersion: 1.20.2-r0](https://img.shields.io/badge/AppVersion-1.20.2--r0-informational?style=flat-square)

Nginx Webserver App for TrueNAS SCALE

**Homepage:** <https://github.com/truecharts/apps/tree/master/charts/stable/nginx-webserver>

## Maintainers

| Name | Email | Url |
| ---- | ------ | --- |
| TrueCharts | info@truecharts.org | https://truecharts.org |

## Source Code

* <https://github.com/truecharts/apps/tree/master/charts/nginx-webserver>

## Requirements

Kubernetes: `>=1.16.0-0`

| Repository | Name | Version |
|------------|------|---------|
| https://truecharts.org | common | 8.14.4 |

## Values

| Key | Type | Default | Description |
|-----|------|---------|-------------|
| env.PGID | string | `"{{ .Values.env.PUID }}"` |  |
| env.PUID | int | `568` |  |
| image.pullPolicy | string | `"IfNotPresent"` |  |
| image.repository | string | `"lscr.io/linuxserver/nginx"` |  |
| image.tag | string | `"1.20.2-r0-ls166"` |  |
| persistence.config.enabled | bool | `true` |  |
| persistence.config.mountPath | string | `"/config"` |  |
| persistence.html.enabled | bool | `true` |  |
| persistence.html.mountPath | string | `"/config/www"` |  |
| service.main.ports.main.port | int | `10162` |  |
| service.main.ports.main.targetPort | int | `80` |  |

----------------------------------------------
Autogenerated from chart metadata using [helm-docs v1.5.0](https://github.com/norwoodj/helm-docs/releases/v1.5.0)
